--- a/index.html
+++ b/index.html
@@ -939,49 +939,55 @@
 
   </section>
 
-  <section class="contact fade-in" id="contact">
-    <h2>Get In Touch</h2>
-    <div class="contact-container">
-      <div class="contact-info">
-        <div class="contact-item">
-          <div class="contact-icon">📧</div>
-          <div>
-            <h4>Email</h4>
-            <p>connect@opslify.xyz</p>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="contact-icon">📱</div>
-          <div>
-            <h4>Phone</h4>
-            <p>+91 7019848758</p>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="contact-icon">📍</div>
-          <div>
-            <h4>Address</h4>
-            <p>Outer Ring Rd, Old Madiwala, Kuvempu Nagar, BTM 2nd Stage, BTM Layout, Bengaluru, Karnataka 560068
-                </div>
+<section class="contact fade-in" id="contact">
+  <h2>Get In Touch</h2>
+  <div class="contact-container">
+
+    <!-- Contact Info -->
+    <div class="contact-info">
+      <div class="contact-item">
+        <div class="contact-icon">📧</div>
+        <div>
+          <h4>Email</h4>
+          <p>connect@opslify.xyz</p>
         </div>
       </div>
-      <form class="contact-form">
-        <div class="form-group">
-          <label for="name">Full Name</label>
-          <input type="text" id="name" name="name" placeholder="Your Name" required>
+      <div class="contact-item">
+        <div class="contact-icon">📱</div>
+        <div>
+          <h4>Phone</h4>
+          <p>+91 7019848758</p>
         </div>
-        <div class="form-group">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" placeholder="you@example.com" required>
+      </div>
+      <div class="contact-item">
+        <div class="contact-icon">📍</div>
+        <div>
+          <h4>Address</h4>
+          <p>Outer Ring Rd, Old Madiwala, Kuvempu Nagar, BTM 2nd Stage, BTM Layout, Bengaluru, Karnataka 560068</p>
         </div>
-        <div class="form-group">
-          <label for="message">Your Message</label>
-          <textarea id="message" name="message" placeholder="Write your message..." required></textarea>
-        </div>
-        <button type="submit" class="submit-btn">Send Message</button>
-      </form>
+      </div>
     </div>
-  </section>
+
+    <!-- Contact Form -->
+    <form action="https://formspree.io/f/mdkdergd" method="POST" class="contact-form">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="you@example.com" required>
+      </div>
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" placeholder="Write your message..." required></textarea>
+      </div>
+      <button type="submit" class="submit-btn">Send Message</button>
+    </form>
+
+  </div>
+</section>
+
 
   <footer>
     <div class="footer-content">
